# dlt-salesforce-iceberg-rest-demo

./: .gitignore  README.md  dump_env_vars.py  env.local.example  mise.toml  pyproject.toml  salesforce_pipeline.py
airflow/: .gitignore  README.md  justfile  pyproject.toml
airflow/dags/: .pyrightconfig.json  salesforce_iceberg_dag.py
dagster/: .gitignore  README.md  justfile  pyproject.toml  setup.cfg  setup.py
dagster/dlt_salesforce/: .gitignore  README.md  assets.py  definitions.py  pyproject.toml
dagster/dlt_salesforce/src/dlt_salesforce/defs/assets/: dlt_salesforce.py
dagster/dlt_salesforce_tests/: test_assets.py
data/: .gitignore  README.md  salesforce_large_scale.recipe.yml  salesforce_medium_scale.recipe.yml  salesforce_small.recipe.yml
iceberg/: __init__.py  schema.py
salesforce/: __init__.py
