[project]
name = "dlt-salesforce-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb]>=1.16.0",
    "simple-salesforce>=1.12.9",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pyright>=1.1.405",
    "ruff>=0.13.1",
]

[tool.ruff]
builtins = ["_"]
exclude = [".venv"]
line-length = 88
indent-width = 4
