[project]
name = "dlt_salesforce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dlt[duckdb]>=1.12.1",
    "pyarrow>=21.0.0",
    "pyiceberg>=0.10.0",
    "s3fs>=2025.9.0",
    "simple-salesforce>=1.12.9",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dlt_salesforce.definitions"
code_location_name = "dlt_salesforce"

[tool.setuptools.packages.find]
exclude=["dlt_salesforce_tests"]

[dependency-groups]
dev = [
    "dagster-webserver>=1.11.11",
    "pytest>=8.4.2",
]
