[project]
name = "dlt_salesforce"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.13",
    "dlt[duckdb]>=1.12.1",
    "pyarrow>=21.0.0",
    "pyiceberg>=0.10.0",
    "s3fs>=2025.9.0",
    "simple-salesforce>=1.12.9",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dlt_salesforce"
registry_modules = [
    "dlt_salesforce.components.*",
]


